# MaxPane

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.xml
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/src/: capture_queue.cpp  capture_queue.h  config.cpp  config.h  container.cpp  container.h  container_input.cpp  container_paint.cpp  container_state.cpp  context_menu.cpp  context_menu.h  debug.h  favorites_manager.cpp  favorites_manager.h  globals.cpp  globals.h  main.cpp  platform.h  project_state.cpp  project_state.h  split_tree.cpp  split_tree.h  splitter.cpp  splitter.h  state_accessor.h  state_limits.h  swell_cocoa_helpers.h  swell_cocoa_helpers.mm  swell_modstub.cpp  window_manager.cpp  window_manager.h  workspace_manager.cpp  workspace_manager.h
docs/: AUDIT-REPORT.md
